[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "active-handout-theme"
version = "0.1"
description = "Minimal theme for course materials"
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    {name = "Igor Montagner", email = ""},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs >= 1.5",
]

[project.urls]
Source = "https://github.com/active-handout/theme"

[project.entry-points."mkdocs.themes"]
active-handout-theme = "ah_theme"

 [project.entry-points."markdown.extensions"]
 active-handout-plugins = "ah_plugin:ActiveHandoutExtension"

[tool.hatch.build]
include = ["/ah_theme", "/ah_plugin"]
